LogIn and SignUp APIs almost ready
