# src/controllers/authController.ts
@@ -1,19 +1,16 @@
-//import { Controller,Get, Route } from 'tsoa';
-/*import { Inject } from 'typescript-ioc';
+import { Controller, Route,Post, Body } from 'tsoa';
+import { Inject } from 'typescript-ioc';
 import { User } from '../users/user';
-import { AuthService } from '../authentication/passportAuth';*/
+import AuthService from '../authentication/passportAuth';
+//import { Validate } from 'class-validator';
 
-//@Route('auth')
-//export class AuthController extends Controller {
-  //@Inject private authService!: AuthService;
-  //@Get('/')
-  //public async getExample(): Promise<string> {
-    //return 'This is an example API endpoint';
-  //}
-//}
+@Route('auth')
+export class AuthController extends Controller {
+  @Inject private authService!: AuthService;
 
-  /*@Post('/signup')
-  public async signup(@Body() user: User): Promise<string> {
+
+  @Post('/signup')
+  public async signup(@Body()user: User): Promise<String> {
     const result = await this.authService.signup(user);
     return result.message;
   }
@@ -23,4 +20,4 @@ import { AuthService } from '../authentication/passportAuth';*/
     const result = await this.authService.login(user);
     return result.message;
   }
-}*/
+}
