# src/controllers/usersController.ts
@@ -1,14 +1,9 @@
-// src/users/usersController.ts
-//fake
-import { User } from '../users/user';
-//fakeend
+
 import DatabaseService from ".././services/database.service";
 import {
-     Body,
     Controller,
     Get,
     // Path,
-     Post,
     // Query,
     Route,
     // SuccessResponse,
@@ -22,27 +17,10 @@ import { Inject } from "typescript-ioc";
     
     @Inject
     private databaseService?:DatabaseService;
-
-    @Get("/testing")
-    public async testingAPI(
-      
-    ): Promise<any> {
-      return {testing:"success"};
-    }
-
+    
     @Get("/test")
     public async testAPI(
       
     ): Promise<any> {
       return {test:this.databaseService?.testFunction()};
-    }
-    //fake
-
-
-    @Post('/signup')
-  public async signup(@Body() user: User): Promise<string> {
-    const result = await this.databaseService?.signup(user);
-    if(result){ return result.message;} else {return 'result is undefined'}
-  }
-  //fakeend
-  }
+    }}
